--- a/form_tags/task.yaml
+++ b/form_tags/task.yaml
@@ -1,6 +1,4 @@
-accessible: true
 author: ''
-categories: []
 contact_url: ''
 context: |
     L'élément ``form`` est l'élément parent qui va nous permettre de créer des formulaires en HTML.
@@ -18,9 +16,9 @@ context: |
       *Note:* Nous nous contenterons d'aborder la partie création d'un formulaire. Le traitement de ses données nécessite des notions avancées dans d'autres langages de programmation qui dépassent le cadre de ce cours.
 
 
-    Nous allons voir différents éléments enfant qui l'accompagne.
+    Nous allons voir différents éléments enfants qui l'accompagnent.
 
-    Les 2 éléments de formulaire les plus courants et qui vont de pairs sont les suivants:
+    Les 2 éléments de formulaire les plus courants et qui vont de pair sont les suivants:
 
     - ``label``: il permet d'associer, via son contenu, un libellé sous forme de texte à un champ spécifique de notre formulaire.
     - ``input``: il correspond au champ avec lequel l'utilisateur va pouvoir interagir.
@@ -49,7 +47,7 @@ context: |
 
     |
     | L'élément ``input``, au même titre que les éléments ``br`` et ``img`` abordés précédemment, est un élément *vide*. Il ne prend donc pas de contenu.
-    | Il n'en reste pas moins un élément très complet et polyvalent de par les différents attributs qu'il est possible de lui assigner et les valeurs qui leur sont associés.
+    | Il n'en reste pas moins un élément très complet et polyvalent de par les différents attributs qu'il est possible de lui assigner et les valeurs qui leur sont associées.
     |
 
     Nous allons voir certains de ces attributs au travers des questions qui suivent.
@@ -63,9 +61,7 @@ environment_parameters:
         memory: '300'
     run_cmd: ''
 environment_type: docker
-evaluate: best
 file: ''
-groups: false
 input_random: 0
 name: Éléments de formulaire (1)
 network_grading: false
@@ -113,8 +109,6 @@ problems:
                 </form>
 
             Reprenez votre réponse à la question 1, et ajoutez-y les attributs ``for`` et ``id`` avec la valeur "email-input".
-
-            TODO expliquer l'intérêt en fb et montrer la façon alternative de lier ces 2 éléments entre eux (englober l'élément ``input`` au sein de l'élément label)
         language: html
         default: |-
             <form>
@@ -151,8 +145,3 @@ problems:
         default: |-
             <form>
             </form>
-stored_submissions: 0
-submission_limit:
-    amount: -1
-    period: -1
-weight: 1.0
