--- a/html_entity/task.yaml
+++ b/html_entity/task.yaml
@@ -1,6 +1,4 @@
-accessible: true
 author: ''
-categories: []
 contact_url: ''
 context: |-
     Les entités HTML sont des courtes chaines de caractères qui permettent de représenter certains caractères spécifiques.
@@ -11,7 +9,7 @@ context: |-
 
         &entity_name;
 
-    Nous allons voir ci-dessous quelques cas de figure où l'utilisation d'entités s'avèrent utile, voire nécessaire.
+    Nous allons voir ci-dessous quelques cas de figure où l'utilisation d'entités s'avère utile, voire nécessaire.
 environment_id: htmlcss
 environment_parameters:
     limits:
@@ -20,9 +18,7 @@ environment_parameters:
         memory: '300'
     run_cmd: ''
 environment_type: docker
-evaluate: best
 file: ''
-groups: false
 input_random: 0
 name: Entités HTML
 network_grading: false
@@ -61,7 +57,7 @@ problems:
         type: code_single_line
         name: Entité de caractère de symboles
         header: |-
-            Les entités HTML sont aussi pratique afin d'afficher des caractères spéciaux, tels que des symboles.
+            Les entités HTML sont aussi pratiques afin d'afficher des caractères spéciaux, tels que des symboles.
 
             Observez par exemple le contenu présent en bas à droite de la page web sur laquelle vous êtes actuellement.
 
@@ -76,8 +72,3 @@ problems:
             Une fois trouvée, renseignez l'entité correspondante en remplacant le ``[?]``.
         default: <p>Fourni par INGInious v.x.x.x [?] 2014-20xx Université catholique
             de Louvain.</p>
-stored_submissions: 0
-submission_limit:
-    amount: -1
-    period: -1
-weight: 1.0
