--- a/link_tags/task.yaml
+++ b/link_tags/task.yaml
@@ -1,6 +1,4 @@
-accessible: true
 author: ''
-categories: []
 contact_url: ''
 context: |
     L'élément ``a`` (pour *anchor*, ou *ancre* en français) crée un lien cliquable, appelé lien *hypertexte*.
@@ -27,9 +25,7 @@ environment_parameters:
         memory: '200'
     run_cmd: ''
 environment_type: docker
-evaluate: best
 file: ''
-groups: false
 input_random: 0
 name: Élément de liens (1)
 network_grading: false
@@ -46,7 +42,7 @@ problems:
         type: code_single_line
         name: Redirection vers adresse e-mail
         header: |
-            Outre la redirection vers des pages web, l'élément d'ancre permet aussi des redirections spécifiques, tel que l'ouverture d'une adresse mail directement dans l'application de messagerie (ex.: *Outlook*, *Thunderbird*) par défaut de l'utilisateur.
+            Outre la redirection vers des pages web, l'élément d'ancre permet aussi des redirections spécifiques, telles que l'ouverture d'une adresse mail directement dans l'application de messagerie (ex.: *Outlook*, *Thunderbird*) par défaut de l'utilisateur.
 
             Pour ce faire, la valeur de l'attribut ``href`` prend la forme suivante: "mailto:*insérer_adresse_mail*"
 
@@ -88,8 +84,3 @@ problems:
 
             Plutôt que de s'ouvrir dans l'onglet courant de votre navigateur, il s'ouvrira dorénavant dans un nouvel onglet.
         default: ''
-stored_submissions: 0
-submission_limit:
-    amount: -1
-    period: -1
-weight: 1.0
